skeleton of the website done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
 </head>
 
 <body>
-  
+  <nav class="nav">
+    <div class="container">
+      <h2 class="logo"><a href="/index.html">My Website</a></h2>
+      <ul>
+        <li><a href="#" class="active">Home</a> </li>
+        <li><a href="#" >Skills</a> </li>
+        <li><a href="#" >Projects</a> </li>
+        <li><a href="#" >Contact</a> </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="hero">
+    <div class="container">
+      <h1>Welcome to my website</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, culpa?</p>
+    </div>
+  </div>
+  <section class="container content">
+    <h3>Content One</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos modi ad, iure beatae voluptas neque nobis obcaecati sunt facere odio quas nesciunt ipsum eaque ea molestiae eum rem sed culpa dignissimos. Facere officia ipsum vitae adipisci consequuntur harum magnam vero quae veniam commodi eveniet architecto totam distinctio inventore aperiam voluptatibus blanditiis hic, sapiente libero itaque, dolores suscipit accusantium possimus? Magnam laborum voluptas deserunt voluptates numquam temporibus possimus quisquam labore assumenda porro totam mollitia dolorum omnis accusantium eos repellendus distinctio vel, enim repudiandae facere amet autem vero. Odit expedita, unde, sed veniam beatae cum labore dolore nobis repellat quaerat eos consectetur?</p>
+
+    <h3>Content Two</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam iusto ducimus ut minima velit modi nihil aliquam, inventore adipisci, est officiis, dolorum temporibus culpa rem! Molestiae, provident? Cupiditate amet, at alias veniam impedit laboriosam, dolorem quo qui exercitationem quisquam quam aspernatur voluptatem debitis repellat tenetur, necessitatibus similique itaque quos dolore.</p>
+  </section>
 
   <script src="script.js"></script>
 </body>
