--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <nav class="nav">
+  <!-- <nav class="nav">
     <div class="container">
       <h2 class="logo"><a href="/index.html">My Website</a></h2>
       <ul>
@@ -23,7 +23,7 @@
         <li><a href="#" >Contact</a> </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
 
   <div class="hero">
     <div class="container">
