--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 
 <body>
-  <!-- <nav class="nav">
+  <nav class="nav ">
     <div class="container">
       <h2 class="logo"><a href="/index.html">My Website</a></h2>
       <ul>
-        <li><a href="#" class="active">Home</a> </li>
+        <li><a href="#" class="current">Home</a> </li>
         <li><a href="#" >Skills</a> </li>
         <li><a href="#" >Projects</a> </li>
         <li><a href="#" >Contact</a> </li>
       </ul>
     </div>
-  </nav> -->
+  </nav>
 
   <div class="hero">
     <div class="container">
